@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.4.4 (pending)
 ==========================
 
+- Fixed extra context menu when moving objects between pages
 - Fixed moving blocks with multiple signal/slot connections
 - Disable insert graph widgets menu when no widgets available
 - Added missing directory option to the FileEntry edit widget
